<resources>
    <string name="app_name">Dementia Care</string>
    <string name="channel_name">DementiaCare</string>
    <string name="channel_description">Notification Channel for Dementia Care</string>

    <string name="func_training">Training</string>
    <string name="func_puzzle">Puzzle &amp; Game</string>
    <string name="func_augmented_reality">Augmented Reality</string>

    <string name="training_info">SET TRAINING TIME</string>
    <string name="training_water">Drinking Water</string>
    <string name="training_lunch">Lunch</string>
    <string name="training_dinner">Dinner</string>
    <string name="training_water_full">Drinking Water Training</string>
    <string name="training_water_info">HOW OFTEN DO I WANT TO DRINK WATER IN A DAY ?</string>
    <string name="nine_to_nine">09:00 AM - 09:00 PM</string>
    <string name="every_two_hour">EVERY 2 HOURS</string>
    <string name="every_hour">EVERY HOUR</string>
    <string name="training_lunch_full">Lunch Training</string>
    <string name="training_dinner_full">Dinner Training</string>

    <string name="puzzle_image">Puzzle</string>
    <string name="puzzle_game">Memory Game</string>
    <string name="game_difficulty">Difficulty</string>
    <string name="difficulty_easy">AMATEUR</string>
    <string name="difficulty_hard">NIGHTMARE</string>
    <string name="game_image">Game Image</string>

    <string name="ar_selfie">Selfie</string>
</resources>
