<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">

    <TextView
        android:id="@+id/lblTrainingInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/googleYellow"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/training_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblTrainingInfo">

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
            android:id="@+id/plDrinkingWater"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            app:pulse_count="4"
            app:pulse_duration="1800"
            app:pulse_repeat="0"
            app:pulse_color="@color/googleBlue"
            app:pulse_startFromScratch="false"
            app:pulse_interpolator="Linear"
            app:layout_constraintBottom_toTopOf="@id/first_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDrinkingWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/training_water"
            app:layout_constraintBottom_toTopOf="@id/lblDrinkingWater"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/drinking_water" />

        <TextView
            android:id="@+id/lblDrinkingWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/training_water"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/first_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDrinkingWater" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/first_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
            android:id="@+id/plLunch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            app:pulse_count="4"
            app:pulse_duration="1800"
            app:pulse_repeat="0"
            app:pulse_color="@color/googleYellow"
            app:pulse_startFromScratch="false"
            app:pulse_interpolator="Linear"
            app:layout_constraintBottom_toTopOf="@id/second_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_guideline" />

        <ImageView
            android:id="@+id/ivLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/func_puzzle"
            app:layout_constraintBottom_toTopOf="@id/lblLunch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_guideline"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/lunch" />

        <TextView
            android:id="@+id/lblLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/training_lunch"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/second_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLunch" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/second_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.66" />

        <pl.bclogic.pulsator4droid.library.PulsatorLayout
            android:id="@+id/plDinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            app:pulse_count="4"
            app:pulse_duration="1800"
            app:pulse_repeat="0"
            app:pulse_color="@color/googleYellow"
            app:pulse_startFromScratch="false"
            app:pulse_interpolator="Linear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_guideline" />

        <ImageView
            android:id="@+id/ivDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/func_augmented_reality"
            app:layout_constraintBottom_toTopOf="@id/lblDinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_guideline"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/dinner" />

        <TextView
            android:id="@+id/lblDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/training_dinner"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>