<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/plTraining"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:pulse_count="4"
        app:pulse_duration="1800"
        app:pulse_repeat="0"
        app:pulse_color="@color/googleYellow"
        app:pulse_startFromScratch="false"
        app:pulse_interpolator="Linear"
        app:layout_constraintBottom_toTopOf="@id/first_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/func_training"
        app:layout_constraintBottom_toTopOf="@id/lblTraining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/brain_training" />

    <TextView
        android:id="@+id/lblTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/func_training"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/first_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTraining" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/first_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/plPuzzle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:pulse_count="4"
        app:pulse_duration="1800"
        app:pulse_repeat="0"
        app:pulse_color="@color/googleGreen"
        app:pulse_startFromScratch="false"
        app:pulse_interpolator="Linear"
        app:layout_constraintBottom_toTopOf="@id/second_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_guideline" />

    <ImageView
        android:id="@+id/ivPuzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/func_puzzle"
        app:layout_constraintBottom_toTopOf="@id/lblPuzzle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/puzzle" />

    <TextView
        android:id="@+id/lblPuzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/func_puzzle"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/second_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPuzzle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/plAugmentedReality"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:pulse_count="4"
        app:pulse_duration="1800"
        app:pulse_repeat="0"
        app:pulse_color="@color/googleBlue"
        app:pulse_startFromScratch="false"
        app:pulse_interpolator="Linear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_guideline" />

    <ImageView
        android:id="@+id/ivAugmentedReality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/func_augmented_reality"
        app:layout_constraintBottom_toTopOf="@id/lblAugmentedReality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/augmented_reality" />

    <TextView
        android:id="@+id/lblAugmentedReality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/func_augmented_reality"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAugmentedReality" />

</androidx.constraintlayout.widget.ConstraintLayout>